--- a/src/app/components/map/map.component.less
+++ b/src/app/components/map/map.component.less
@@ -23,7 +23,7 @@
     .main {
         grid-template-columns: 1fr; 
     }
-    .near {
+    app-near {
         display: none;
         visibility: hidden;
     }
