--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="wrap themed-text">
     <nav class="navbar">
-        <div class="logo"><a routerLink="/">Nomad Pitstops</a></div>
+        <div class="logo"><a routerLink="/">Nomad Pit Stops</a></div>
         <div class="menu">
             <div class="hamberger" (click)="onClickHamberger($event)">
                 <div></div>
