--- a/src/app/components/near/nearcard/nearcard.component.html
+++ b/src/app/components/near/nearcard/nearcard.component.html
@@ -1,5 +1,5 @@
-<div class="__card __card-reactive __hoverable" (click)="onClick()" (touchstart)="onClick()">
-    <h2 class="name">{{name}}</h2>
-    <h4 class="connection">Internet: {{connection}}</h4>
-    <p class="notes">{{notes}}</p>
+<div class="__card __card-reactive __hoverable near-card" (click)="onClick()" (touchstart)="onClick()">
+    <p class="name __text-heading">{{name}}</p>
+    <p class="__text-sub">Internet: {{connection}}</p>
+    <p class="__text">{{notes}}</p>
 </div>
