--- a/src/app/less/components/card.less
+++ b/src/app/less/components/card.less
@@ -1,7 +1,7 @@
 @import './variables';
 .__card {
     // width: 100%;
-    margin: 3rem;
+    // margin: 3rem;
     border-radius: .1rem;
     background-color: white;
     box-shadow: @shadow;
@@ -10,6 +10,7 @@
 }
 
 .__card.__hoverable {
+    cursor: pointer;
     transition: box-shadow @transitionCubic;
 }
 
