--- a/src/app/components/blogs/blogs.component.less
+++ b/src/app/components/blogs/blogs.component.less
@@ -3,6 +3,7 @@
     margin-top: 80px;
     height: 100%;
     background-color: @background;
+    overflow-y: auto;
 }
 .head {
     .title {
@@ -32,17 +33,28 @@
         }
         .title {
             position: absolute;
-            bottom: 0;
-            right: 50%;
+            bottom: -25%;
+            // right: 50%;
             background-color: @primary;
-            width: 75%;
-            transform: translate(50%, 50%);
-
+            width: 100%;
+            height: 30%;
             box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12),
                 0 1px 2px rgba(0, 0, 0, 0.24);
             transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+            overflow: hidden;
             * {
                 text-align: center;
+            }
+            .readmore {
+                display: none;
+                visibility: hidden;
+            }
+            .readmore:hover {
+                text-decoration: underline;
+            }
+            .description {
+                display: none;
+                visibility: hidden;
             }
         }
     }
@@ -55,6 +67,15 @@
         .title {
             box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
                 0 10px 10px rgba(0, 0, 0, 0.22);
+            height: 125%;
+            .readmore {
+                display: block;
+                visibility: visible;
+            }
+            .description {
+                display: block;
+                visibility: visible;
+            }
         }
     }
 }
@@ -67,5 +88,8 @@
 @media only screen and (max-width: 750px) {
     .posts {
         grid-template-columns: 1fr;
+        .post {
+            margin: 2rem;
+        }
     }
 }
