--- a/src/app/components/near/near.component.html
+++ b/src/app/components/near/near.component.html
@@ -1,5 +1,6 @@
 <div class="wrap">
     <input
+        *ngIf="locationFinder"
         ngx-google-places-autocomplete
         [options]="options"
         #placesRef="ngx-places"
