--- a/src/app/components/near/nearcard/nearcard.component.less
+++ b/src/app/components/near/nearcard/nearcard.component.less
@@ -1,18 +1,5 @@
 @import '../../../less/main';
-.wrap {
-    pointer-events: all;
-    margin: 1rem;
-    padding: 0.4rem;
-    border-radius: 3px;
-    background-color: white;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-    // border-bottom: 3px solid @primary;
-    // color: white;
-}
-.wrap:hover {
-    margin-right: .5rem;
-    margin-left: .5rem;
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-    cursor: pointer;
+.__card.near-card {
+    margin: 0;
+    margin-bottom: 1rem;
 }
