--- a/src/app/less/components/fonts.less
+++ b/src/app/less/components/fonts.less
@@ -1,8 +1,18 @@
 @import './../main.less';
-@fontPrimary: 'Notable', sans-serif;
+@fontPrimary: 'Raleway', sans-serif;
 .__text-heading {
-    color: @primary;
+    color: @text;
     font-family: @fontPrimary;
-    text-shadow: -1px 1px 0px @background, -2px 2px 0px @background,
-                -3px 3px 0px @contrast;
+    font-size: 2.2rem;
+    font-weight: 900;
+}
+.__text {
+    font-family: @fontPrimary;
+    font-size: 1.2rem;
+}
+.__text-sub {
+    font-family: @fontPrimary;
+    color: @text-contrast;
+    font-size: .9rem;
+    font-weight: bolder;
 }
