--- a/src/app/less/components/variables.less
+++ b/src/app/less/components/variables.less
@@ -1,9 +1,19 @@
+//colors
 @background:#2B292B;
 @primary:#c29d52;
 @contrast:#6e582c;
-@mobile: 600px;
+@background-light: #f9f9f9;
+@text: #000000;
+@text-contrast: #666666;
 
+//Box Shadows
 @shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 @shadowLifted: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 
+//Transitions
 @transitionCubic: 0.3s cubic-bezier(.25,.8,.25,1);
+
+//screen sizes
+@mobile: 600px;
+@tablet: 1100px;
+@tablet-small: 900px;
