--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,11 @@
 <div class="wrap themed-text">
     <nav class="navbar">
-        <div class="logo"><a routerLink="/">Nomad Pit Stops</a></div>
+        <div class="logo">
+            <a routerLink="/"
+                ><span class="title">Nomad Pit Stops</span>
+                <img class="img" src="../../../assets/svg/mountains.svg" alt=""
+            /></a>
+        </div>
         <div class="menu">
             <div class="hamberger" (click)="onClickHamberger($event)">
                 <div></div>
@@ -11,6 +16,7 @@
         <div class="links {{ linksState }}" [@openItems]>
             <div><a routerLink="/blog">Blog</a></div>
             <div><a routerLink="/map">Map</a></div>
+            <div><a routerLink="/about">About</a></div>
             <div><a routerLink="nearme" class="near">Nearby</a></div>
             <!-- <li>
                 <a routerLink="/login"
