--- a/src/app/components/navbar/navbar.component.less
+++ b/src/app/components/navbar/navbar.component.less
@@ -10,11 +10,8 @@
     grid-template-areas: 'logo logo links';
     color: #c29d52;
     background-color: @background;
-    text-shadow: -1px 1px 0px @background , -2px 2px 0px @background, -3px 3px 0px @contrast;;;
-    -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.35);
-    -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.35);
-    box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.35);
     transition: 2s;
+    box-shadow: @shadow;
     a {
         text-decoration-line: none;
         color: @primary;
@@ -27,6 +24,12 @@
         padding-left: 10px;
         font-weight: bold;
         letter-spacing: .2rem;
+        .img {
+            width: 5rem;
+            position: absolute;
+            top: 0;
+            padding-left: 1rem;
+        }
     }
     .logo::before {
         content: ' ';
@@ -56,9 +59,16 @@
         
     }
 }
-@media screen and (max-width: @mobile) {
+@media screen and (max-width: @tablet-small) {
     .navbar {
         grid-template-areas: 'logo logo menu' 'links links links';
+        .logo {
+            font-size: 1.2em;
+            .title {
+                display: none;
+                visibility: hidden;
+            }
+        }
         .menu {
             display: block;
             visibility: visible;
