full padding top

--- a/src/styles.less
+++ b/src/styles.less
@@ -15,7 +15,7 @@ body {
             -3px 3px 0px #2b292b, -4px 4px 0px #6e582c;
     }
     app-root {
-        
+        padding-top: 80px;
         height: 100%;
         max-height: 100%;
         overflow: hidden;
