--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,11 +13,11 @@
                 <div></div>
             </div>
         </div>
-        <div class="links {{ linksState }}" [@openItems]>
-            <div><a routerLink="/blog">Blog</a></div>
-            <div><a routerLink="/map">Map</a></div>
-            <div><a routerLink="/about">About</a></div>
-            <div><a routerLink="nearme" class="near">Nearby</a></div>
+        <div class="links {{ linksState }} __text" [@openItems]>
+            <div class="link"><a routerLink="/blog">Blog</a></div>
+            <div class="link"><a routerLink="/map">Map</a></div>
+            <div class="link"><a routerLink="/about">About</a></div>
+            <div class="link"><a routerLink="nearme" class="near">Nearby</a></div>
             <!-- <li>
                 <a routerLink="/login"
                     >Log In</a
