--- a/src/app/components/navbar/navbar.component.less
+++ b/src/app/components/navbar/navbar.component.less
@@ -48,6 +48,8 @@
         justify-self: right;
         padding-right: 10px;
         display: flex;
+        font-weight: bold;
+        font-size: 1.5rem;
         div {
             list-style-type: none;
             padding: 5px;
@@ -101,6 +103,11 @@
             -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.35);
             box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.35);
             transition: right .5s;
+            text-align: right;
+            font-size: 2rem;
+            .link {
+                margin-bottom: 1.2rem;
+            }
             .near {
                 display: initial;
                 visibility: visible;
