--- a/src/app/components/blogs/blogs.component.html
+++ b/src/app/components/blogs/blogs.component.html
@@ -6,7 +6,7 @@
         <a class="post" *ngFor="let post of posts" routerLink="{{ post.id }}">
             <div class="image"><img src="{{ post.thumbnail }}" alt="" /></div>
             <div class="title">
-                <p class="__text-heading">{{ post.title }}</p>
+                <p class="__text-heading text-title">{{ post.title }}</p>
                 <div class="__text description">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Quidem, dolorum, quia impedit quam quod placeat, blanditiis
