--- a/src/app/components/blogs/blogs.component.less
+++ b/src/app/components/blogs/blogs.component.less
@@ -41,6 +41,9 @@
                 0 1px 2px rgba(0, 0, 0, 0.24);
             transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
             overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
             * {
                 text-align: center;
             }
@@ -67,6 +70,12 @@
             box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
                 0 10px 10px rgba(0, 0, 0, 0.22);
             height: 125%;
+            .text-title {
+                position: relative;
+                transform: translate(0, 0);
+                left: 0;
+                padding: initial;
+            }
             .readmore {
                 display: block;
                 visibility: visible;
