made blogs look for snippets

--- a/src/app/components/blogs/blog/blog.component.html
+++ b/src/app/components/blogs/blog/blog.component.html
@@ -4,8 +4,8 @@
     </div>
     <div class="content">
         <h1 class="title">{{ title }}</h1>
-        <h3 class="date">{{ date }}</h3>
-        <h3 class="__text-sub">{{ author }}</h3>
+        <h3 class="date __text-sub">{{ date }}</h3>
+        <h3 class="__text-sub">Erik Badger</h3>
         <app-social-share></app-social-share>
         <div class="body" innerHTML="{{ body }}"></div>
     </div>
