--- a/src/app/components/blogs/blog/blog.component.less
+++ b/src/app/components/blogs/blog/blog.component.less
@@ -14,7 +14,7 @@
     }
     .content {
         grid-area: content;
-        font-family: 'Raleway', sans-serif;
+        font-family: 'Open Sans', sans-serif;
 
         .title {
             font-size: 4rem;
@@ -23,7 +23,7 @@
             margin-bottom: 0px;
         }
         .date {
-            color: gray;
+            // color: gray;
             padding: 0px;
             margin: 0px;
         }
@@ -34,6 +34,7 @@
         }
     }
     .content ::ng-deep {
+        // line-height: 2.5rem;
         .ql-align-right {
             text-align: right;
         }
@@ -45,6 +46,9 @@
         }
         img {
             max-width: 100%;
+        }
+        p {
+            line-height: 3rem;
         }
     }
 }
