--- a/src/app/less/components/fonts.less
+++ b/src/app/less/components/fonts.less
@@ -1,5 +1,5 @@
 @import './../main.less';
-@fontPrimary: 'Raleway', sans-serif;
+@fontPrimary: 'Open Sans', sans-serif;
 .__text-heading {
     color: @text;
     font-family: @fontPrimary;
@@ -13,6 +13,6 @@
 .__text-sub {
     font-family: @fontPrimary;
     color: @text-contrast;
-    font-size: .9rem;
+    font-size: 0.9rem;
     font-weight: bolder;
 }
