--- a/src/app/components/blogs/blogs.component.html
+++ b/src/app/components/blogs/blogs.component.html
@@ -8,10 +8,7 @@
             <div class="title">
                 <p class="__text-heading text-title">{{ post.title }}</p>
                 <div class="__text description">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Quidem, dolorum, quia impedit quam quod placeat, blanditiis
-                    error iste dolore nobis consequuntur doloribus quasi dolorem
-                    fugiat voluptatibus reprehenderit eligendi saepe. Error.
+                    {{ post.snippet }}
                 </div>
                 <p class="__text-sub readmore">Read More</p>
             </div>
