--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,6 +1,6 @@
 <div class="main">
     <div class="pitstops">
-        <app-near></app-near>
+        <app-near findAll="true"></app-near>
     </div>
     <div class="blog">
         <h1 class="__text-heading blog-heading">Recent Blog Posts</h1>
