--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,8 +1,8 @@
 <div class="main">
-    <app-near></app-near>
+    <app-near locationFinder="true"></app-near>
     <!-- <div></div> -->
     <div class="col">
-            <agm-map
+        <agm-map
             [latitude]="latitude"
             [longitude]="longitude"
             [streetViewControl]="false"
