--- a/src/app/components/map/map.component.less
+++ b/src/app/components/map/map.component.less
@@ -1,10 +1,10 @@
 .main {
-    
     height: 100%;
     display: grid;
     grid-template-columns: 1fr 3fr;
+    // grid-template-rows: max-content;
     app-near {
-        height: 100%;
+        // height: 100%;
     }
     .col {
         position: relative;
@@ -21,7 +21,7 @@
 }
 @media only screen and (max-width: 800px) {
     .main {
-        grid-template-columns: 1fr; 
+        grid-template-columns: 1fr;
     }
     app-near {
         display: none;
