--- a/src/app/components/landing/landing.component.less
+++ b/src/app/components/landing/landing.component.less
@@ -1,10 +1,10 @@
 @import '../../less/main.less';
 .main {
-    @pitstopWidth:25vw;
+    @pitstopWidth: 25vw;
     position: relative;
-    
+
     height: 100%;
-    background:@background-light;
+    background: @background-light;
     overflow-y: auto;
     display: grid;
     grid-template-columns: @pitstopWidth auto;
@@ -18,6 +18,7 @@
             margin: 1rem;
             color: initial;
             text-decoration: initial;
+            padding: 2rem;
             // font-family: 'Raleway';
             .sub {
                 text-align: right;
@@ -27,19 +28,19 @@
             }
         }
     }
-    .pitstops {
-        height: 100%;
-        width: @pitstopWidth;
-        position: fixed;
-        background-color: @background;
-        grid-area: pitstops;
-        overflow: hidden;
-        app-near {
-            // position: fixed;
-            height: 100%;
-            width: 100%;
-        }
-    }
+    // .pitstops {
+    //     // height: 100%;
+    //     width: @pitstopWidth;
+    //     // position: fixed;
+    //     background-color: @background;
+    //     grid-area: pitstops;
+    //     overflow: hidden;
+    //     app-near {
+    //         // position: fixed;
+    //         // height: 100%;
+    //         // width: 100%;
+    //     }
+    // }
 }
 
 @media screen and (max-width: @tablet) {
