--- a/src/app/components/near/near.component.less
+++ b/src/app/components/near/near.component.less
@@ -4,14 +4,18 @@
     // position: absolute;
     z-index: 3;
     pointer-events: all;
-    width: 90%;
+    // width: 95%;
     border: none;
     border-radius: 3px;
-    margin: 0.4rem;
+    // margin: 0.4rem;
+    margin-bottom: 0.7rem;
     padding: 10px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
     overflow: hidden;
+    width: 100%;
+    box-sizing: border-box;
+    direction: ltr;
 }
 
 .wrap {
@@ -22,15 +26,23 @@
     background-color: @background;
     .cards {
         padding: 1rem;
+        padding-bottom: 0;
         // margin-top: 1rem;
         height: 100%;
         overflow: hidden;
         position: absolute;
-        // overflow: auto;
-        // direction:ltr;
+        overflow: auto;
+        direction: ltr;
         left: 0;
         right: 0;
         margin-left: auto;
         margin-right: auto;
+        box-sizing: border-box;
+        overflow-y: auto;
+        direction: rtl;
+        // padding-bottom: 3rem;
+        app-nearcard {
+            direction: ltr;
+        }
     }
 }
