--- a/src/styles.less
+++ b/src/styles.less
@@ -7,6 +7,7 @@ body {
     display: flex;
     flex-direction: column;
     background-color: @background;
+    font-family: 'Open Sans', sans-serif;
     * .themed-text {
         font-family: 'Notable', sans-serif;
     }
