--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,17 +17,25 @@
             <div class="link"><a routerLink="/blog">Blog</a></div>
             <div class="link"><a routerLink="/map">Map</a></div>
             <div class="link"><a routerLink="/about">About</a></div>
-            <div class="link"><a routerLink="nearme" class="near">Nearby</a></div>
+            <div class="link">
+                <a routerLink="nearme" class="near">Nearby</a>
+            </div>
+            <div
+                *ngIf="!loggedIn(); then loggedInBlock; else logOutBlock"
+            ></div>
+            <ng-template #loggedInBlock>
+                <div class="link">
+                    <a routerLink="/login">Login</a>
+                </div>
+            </ng-template>
+            <ng-template #logOutBlock>
+                <div class="link" #loggedOutBlock>
+                    <a (click)="logout()" routerLink="/">Logout</a>
+                </div>
+            </ng-template>
+
             <!-- <li>
-                <a routerLink="/login"
-                    >Log In</a
-                >
-            </li>
-            <li>
-                <a
-                    routerLink="/login"
-                    >Log Out</a
-                >
+                <a routerLink="/login">Log Out</a>
             </li> -->
         </div>
     </nav>
